# mouse_tray

./: .gitignore  CLAUDE.md  README.md  README.ru.md  main.py  pyproject.toml
mouse_tray/: __init__.py  __main__.py  battery.py  build_info.py  config.py  logging_setup.py  resources.py  storage.py
mouse_tray/drivers/: __init__.py  atk.py  attackshark.py  driver.py  hid.py  hidpp.py  lamzu.py  logitech.py  ninjutso.py  nordic52.py  nordic54.py  razer.py  realtek.py
mouse_tray/drivers/chipset/: __init__.py  nordic52.py  nordic54.py  realtek.py
mouse_tray/ui/: __init__.py  app.py  icons.py  settings.py  tray.py
tools/: make_release.py
