[project]
name = "mouse-tray-charge"
version = "0.1.0"
description = "Universal wireless-mouse battery indicator in the Windows system tray"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hidapi>=0.15.0",
    "pillow>=12.1.1",
    "wxpython>=4.2.5",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
mouse-tray-charge = "mouse_tray:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mouse_tray"]
